--- a/ShopMobileApp/ShopMobileApp/App.xaml
+++ b/ShopMobileApp/ShopMobileApp/App.xaml
@@ -3,6 +3,28 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ShopMobileApp.App">
     <Application.Resources>
+        <ResourceDictionary>
+            <ControlTemplate x:Key="GeneralTemplate">
+                <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Grid HorizontalOptions="FillAndExpand" VerticalOptions="Start" Margin="30,20,30,10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <Label Text="{TemplateBinding Parent.Title}" TextColor="Black" FontSize="22" VerticalOptions="Center"/>
+                        <StackLayout Grid.Column="1" Orientation="Horizontal" HorizontalOptions="End" VerticalOptions="Center">
+                            <ImageButton Source="WIP.png" Aspect="AspectFit" HeightRequest="32" WidthRequest="30" VerticalOptions="Center"/>
+                            <ImageButton Source="WIPP.png" Aspect="AspectFit" HeightRequest="32" WidthRequest="30" VerticalOptions="Center"/>
+                        </StackLayout>
+                    </Grid>
+                    <ContentPresenter Grid.Row="1" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
+                </Grid>
+            </ControlTemplate>
+        </ResourceDictionary>
 
     </Application.Resources>
 </Application>
