--- a/ShopMobileApp/ShopMobileApp/Views/ShopPage.xaml
+++ b/ShopMobileApp/ShopMobileApp/Views/ShopPage.xaml
@@ -49,7 +49,7 @@
                     <Label Text="Collections" TextColor="Black" FontSize="20"/>
                     <Label Text="Show all" TextColor="Black" FontSize="14" VerticalOptions="Center" Opacity="0.5" HorizontalOptions="End" Margin="0,0,30,0"/>
                     <ScrollView Orientation="Horizontal" Grid.Row="1" VerticalOptions="Start" VerticalScrollBarVisibility="Never" HorizontalScrollBarVisibility="Never">
-                        <StackLayout BindableLayout.ItemsSource="{Binding CllectionsList}" Orientation="Horizontal" Spacing="20" VerticalOptions="Start">
+                        <StackLayout BindableLayout.ItemsSource="{Binding CollectionsList}" Orientation="Horizontal" Spacing="20" VerticalOptions="Start">
                             <BindableLayout.ItemTemplate>
                                 <DataTemplate>
                                     <StackLayout VerticalOptions="Start">
