Banner update + TabBar update + Items List + Resources

--- a/ShopMobileApp/ShopMobileApp/AppShell.xaml
+++ b/ShopMobileApp/ShopMobileApp/AppShell.xaml
@@ -26,18 +26,18 @@
     </Shell.Resources>
     
     <TabBar>
-        <Tab Title="Shop" Icon="WIPP.png">
+        <Tab Title="Main Page" Icon="MainPageIcon.png">
             <ShellContent ContentTemplate="{DataTemplate views:ShopPage}"/>
         </Tab>
         <Tab Title="Explore" Icon="WIPP.png">
             <ShellContent ContentTemplate="{DataTemplate views:ExplorePage}"/>
         </Tab>
-        <Tab Title="Collections" Icon="WIPP.png">
+        <Tab Title="All Items" Icon="ItemsIcon2.png">
             <ShellContent ContentTemplate="{DataTemplate views:CollectionsPage}"/>
         </Tab>
-        <Tab Title="Profile" Icon="WIPP.png">
+        <!--<Tab Title="Profile" Icon="WIPP.png">
             <ShellContent ContentTemplate="{DataTemplate views:ProfilePage}"/>
-        </Tab>
+        </Tab>-->
     </TabBar>
     
 </Shell>
