--- a/ShopMobileApp/ShopMobileApp/App.xaml
+++ b/ShopMobileApp/ShopMobileApp/App.xaml
@@ -16,10 +16,10 @@
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
                         <Label Text="{TemplateBinding Parent.Title}" TextColor="Black" FontSize="22" VerticalOptions="Center"/>
-                        <StackLayout Grid.Column="1" Orientation="Horizontal" HorizontalOptions="End" VerticalOptions="Center">
+                        <!--<StackLayout Grid.Column="1" Orientation="Horizontal" HorizontalOptions="End" VerticalOptions="Center">
                             <ImageButton Source="WIP.png" Aspect="AspectFit" HeightRequest="32" WidthRequest="30" VerticalOptions="Center"/>
                             <ImageButton Source="WIPP.png" Aspect="AspectFit" HeightRequest="32" WidthRequest="30" VerticalOptions="Center"/>
-                        </StackLayout>
+                        </StackLayout>-->
                     </Grid>
                     <ContentPresenter Grid.Row="1" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
                 </Grid>
