--- a/ShopMobileApp/ShopMobileApp/Views/ShopPage.xaml
+++ b/ShopMobileApp/ShopMobileApp/Views/ShopPage.xaml
@@ -18,7 +18,7 @@
                 <DataTemplate>
                     <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
                         <Image Source="{Binding Image}" Aspect="Fill" HorizontalOptions="FillAndExpand"/>
-                        <Image Source="WIP.png" Aspect="Fill" HorizontalOptions="FillAndExpand"/>
+                        <Image Source="overlay.png" Aspect="Fill" HorizontalOptions="FillAndExpand"/>
                         <StackLayout Margin="30,20,0,0" Spacing="15" HorizontalOptions="FillAndExpand" VerticalOptions="Center">
                             <Label Text="{Binding Heading}" TextColor="White" FontSize="12"/>
                             <BoxView BackgroundColor="White" HorizontalOptions="Start" VerticalOptions="Start" HeightRequest="1" WidthRequest="50"/>
@@ -31,10 +31,10 @@
                 </DataTemplate>
             </cv:CarouselViewControl.ItemTemplate>
         </cv:CarouselViewControl>
-        <StackLayout Grid.Row="1" Orientation="Horizontal" HorizontalOptions="End" Margin="30,20">
-            <ImageButton Source="WIPP.png" Aspect="AspectFit" HeightRequest="32" WidthRequest="30" VerticalOptions="Center"/>
+        <!--<StackLayout Grid.Row="1" Orientation="Horizontal" HorizontalOptions="End" Margin="30,20">
+            <ImageButton Source="E36.jpg" Aspect="AspectFit" HeightRequest="32" WidthRequest="30" VerticalOptions="Center"/>   Koszyk i ulubione
             <ImageButton Source="WIP.png" Aspect="AspectFit" HeightRequest="32" WidthRequest="30" VerticalOptions="Center"/>
-        </StackLayout>
+        </StackLayout>-->
         <ScrollView Grid.Row="2" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
             <Grid RowSpacing="30" HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand">
                 <Grid.RowDefinitions>
@@ -46,7 +46,7 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <Label Text="Collections" TextColor="Black" FontSize="20"/>
+                    <Label Text="Recently added items" TextColor="Black" FontSize="20"/>
                     <Label Text="Show all" TextColor="Black" FontSize="14" VerticalOptions="Center" Opacity="0.5" HorizontalOptions="End" Margin="0,0,30,0"/>
                     <ScrollView Orientation="Horizontal" Grid.Row="1" VerticalOptions="Start" VerticalScrollBarVisibility="Never" HorizontalScrollBarVisibility="Never">
                         <StackLayout BindableLayout.ItemsSource="{Binding CollectionsList}" Orientation="Horizontal" Spacing="20" VerticalOptions="Start">
@@ -69,7 +69,7 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <Label Text="New Trends" TextColor="Black" FontSize="20"/>
+                    <Label Text="Bestsellers" TextColor="Black" FontSize="20"/>
                     <Label Text="Show all" TextColor="Black" FontSize="14" VerticalOptions="Center" Opacity="0.5" HorizontalOptions="End" Margin="0,0,30,0"/>
                     <ScrollView Orientation="Horizontal" Grid.Row="1" VerticalOptions="Start" VerticalScrollBarVisibility="Never" HorizontalScrollBarVisibility="Never">
                         <StackLayout Orientation="Horizontal" BindableLayout.ItemsSource="{Binding TrendsList}" Spacing="15" VerticalOptions="Start">
@@ -83,8 +83,8 @@
                                             <Label Text="{Binding Name}" TextColor="Black" FontSize="15"/>
                                             <Label Text="{Binding Price}" Margin="0,-7,0,0" TextColor="#62153B" FontSize="12"/>
                                             <StackLayout Orientation="Horizontal" Margin="0,15,0,0">
-                                                <Image Source="WIP.png" Aspect="Fill" VerticalOptions="Center" WidthRequest="15" HeightRequest="15"/>
-                                                <Label Text="ADD TO CART" TextColor="Black" FontSize="10" Opacity="0.6" VerticalOptions="Center"/>
+                                                <!--<Image Source="WIP.png" Aspect="Fill" VerticalOptions="Center" WidthRequest="15" HeightRequest="15"/>
+                                                <Label Text="ADD TO CART" TextColor="Black" FontSize="10" Opacity="0.6" VerticalOptions="Center"/>-->
                                             </StackLayout>
                                         </StackLayout>
                                     </StackLayout>
