--- a/ShopMobileApp/ShopMobileApp/Views/CollectionsPage.xaml
+++ b/ShopMobileApp/ShopMobileApp/Views/CollectionsPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             Title="COLLECTIONS"
+             Title="ALL ITEMS"
              x:Class="ShopMobileApp.Views.CollectionsPage">
 
     <ContentView ControlTemplate="{StaticResource GeneralTemplate}" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
