--- a/ShopMobileApp/ShopMobileApp/Views/ExplorePage.xaml
+++ b/ShopMobileApp/ShopMobileApp/Views/ExplorePage.xaml
@@ -11,11 +11,12 @@
                     <DataTemplate>
                         <Grid HorizontalOptions="FillAndExpand" VerticalOptions="Start" HeightRequest="270">
                             <Image Source="{Binding Image}" Aspect="Fill" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
-                            <Image Source="WIP.png" Aspect="Fill" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
+                            <Image Source="overlay.png" Aspect="Fill" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
                             <StackLayout Margin="30" VerticalOptions="EndAndExpand">
                                 <Label Text="{Binding Title}" TextColor="White" FontSize="35"/>
                                 <Label Text="{Binding Caption}" TextColor="White" FontSize="15"/>
                             </StackLayout>
+                            <Button Opacity="0" Clicked="Button_Clicked"></Button>
                         </Grid>
                     </DataTemplate>
                 </BindableLayout.ItemTemplate>
